<resources>
    <string name="app_name">Pets Hangout</string>
    <string name="action_logout">Sign Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="reg">Register</string>
    <string name="title_activity_registration">Registration</string>
    <string name="reg_info">Please fill in the details bellow to register your user</string>
    <string name="age_group">Your age group:</string>
    <string-array name="age_choices">
        <item>Tap to change</item>
        <item> 0 - 14</item>
        <item>14 - 18</item>
        <item>18 - 30</item>
        <item>30 - 40</item>
        <item>40 - 50</item>
        <item>50 + </item>
    </string-array>
    <string name="title_activity_chat">Global Chat</string>
    <string name="title_activity_dialogs">Chats</string>
    <string name="title_activity_notes">Notes Saved</string>
    <string name="clear">Clear All Notes</string>
    <string name="title_activity_editor">Edit A Note</string>
    <string name="action_settings">Settings</string>
    <string name="all_deleted">All Notes Cleared</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="note">Note</string>
    <string name="n_note">New Note</string>
    <string name="updated">Note Updated!</string>
    <string name="deleted">Note Deleted!</string>
    <string name="action_del">Delete Note</string>
    <string name="btn_send">SEND</string>
    <string name="title_activity_login_signup">Login</string>
    <string name="SignupBtn">REGISTER</string>
    <string name="LoginBtn">LOG IN</string>
    <string name="Password">Password:</string>
    <string name="Username">Username:</string>
    <string name="City">Enter your city if you are registering:</string>
    <string name="title_activity_find_pets">Friend Finder</string>
    <string name="enter_text">Enter text:</string>
</resources>
